[package]
name = "leptos_plausible"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
leptos = "0.6.13"
leptos-use = "0.11.3"
leptos_router = "0.6.13"
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.122"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

